--- a/01-DefiningClasses/Problem04SoftwareUniversityLearningSystem/Problem04SoftwareUniversityLearningSystem.csproj
+++ b/01-DefiningClasses/Problem04SoftwareUniversityLearningSystem/Problem04SoftwareUniversityLearningSystem.csproj
@@ -41,9 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CurrentStudent.cs" />
+    <Compile Include="DropoutStudent.cs" />
+    <Compile Include="GraduateStudent.cs" />
+    <Compile Include="JuniorTrainer.cs" />
+    <Compile Include="OnlineStudent.cs" />
+    <Compile Include="OnsiteStudent.cs" />
     <Compile Include="Person.cs" />
+    <Compile Include="SeniorTrainer.cs" />
     <Compile Include="SoftwareUniversityLearningSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Student.cs" />
+    <Compile Include="Trainer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
